k8s-configs/ping-cloud/base/pingaccess-was/engine/base/ingress.yaml
# This defines the ingress for the pingaccess-was runtime service

# NOTE: it will only work if an ingress controller (e.g. nginx) is running on
# your cluster.

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pingaccess-was-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx-public
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      Include /etc/nginx/owasp-modsecurity-crs/nginx-modsecurity.conf
      SecRuleEngine DetectionOnly
      SecRequestBodyAccess On
      SecAuditEngine RelevantOnly
      SecAuditLogParts ABCDEFGHIJKZ
      SecAuditLogType Serial
      SecAuditLogFormat JSON
      SecAuditLog /dev/stdout
    # Possible fix for some 502 failures on admin assets and api requests.
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  tls:
    - hosts:
        - pingaccess-admin-dev.ping-demo.com
        - pingfederate-admin-dev.ping-demo.com
        - monitoring-dev.ping-demo.com
        - prometheus-dev.ping-demo.com
        - logs-dev.ping-demo.com

  rules:
    - host: pingaccess-admin-dev.ping-demo.com
      http:
        paths:
          # This rule gives external access to the PingAccess admin service
          - path: /
            backend:
              serviceName: pingaccess-was
              servicePort: 443
    - host: pingfederate-admin-dev.ping-demo.com
      http:
        paths:
          # This rule gives external access to the PingFederate admin service
          - path: /
            backend:
              serviceName: pingaccess-was
              servicePort: 443
    - host: monitoring-dev.ping-demo.com
      http:
        paths:
          # This rule allows external access to Grafana via the pingaccess-was runtime service
          - path: /
            backend:
              serviceName: pingaccess-was
              servicePort: 443
    - host: prometheus-dev.ping-demo.com
      http:
        paths:
          # This rule allows external access to Prometheus via the pingaccess-was runtime service
          - path: /
            backend:
              serviceName: pingaccess-was
              servicePort: 443
    - host: logs-dev.ping-demo.com
      http:
        paths:
          # This rule allows external access to Kibana via the pingaccess-was runtime service
          - path: /
            backend:
              serviceName: pingaccess-was
              servicePort: 443
